# verifikasjonsprogramvare

./: .gitattributes  README.md  checkstyle.xml  local-jalopy.xml  pmd.xml  pom.xml
cppvv/: AUTHOR  CMakeLists.txt  COPYRIGHT  README.md  install.sh
cppvv/doc/: doxygen.conf
cppvv/doc/files/: license.md  mainpage.md
cppvv/doc/uml/: arithm.odg
cppvv/src/: main.cpp
cppvv/src/arithm/: CMakeLists.txt  Makefile  arithm.cpp  arithm.hpp  arithmtest.cpp
cppvv/src/arithm/elgamal/: elgamal.cpp  elgamal.hpp
cppvv/src/arithm/elmt/: collectionofelmts.cpp  collectionofelmts.hpp  elmt.cpp  elmt.hpp  largenumber.cpp  largenumber.hpp  prodgrpelmt.cpp  prodgrpelmt.hpp
cppvv/src/arithm/field/: field.cpp  field.hpp  modfield.cpp  modfield.hpp  prodfield.cpp  prodfield.hpp
cppvv/src/arithm/group/: group.cpp  group.hpp  prodgrp.cpp  prodgrp.hpp
cppvv/src/arithm/psubgroup/: modpgrp.cpp  modpgrp.hpp  psubgroup.cpp  psubgroup.hpp
cppvv/src/crypto/: CMakeLists.txt  crypto.cpp  crypto.hpp  prgtest.cpp  rotest.cpp  shatest.cpp
cppvv/src/crypto/prg/: prg.cpp  prg.hpp
cppvv/src/crypto/ro/: ro.cpp  ro.hpp
cppvv/src/crypto/sha/: sha256.cpp  sha256.hpp  sha2_64bits.cpp  sha2_64bits.hpp  sha384.cpp  sha384.hpp  sha512.cpp  sha512.hpp  shax.cpp  shax.hpp
cppvv/src/io/: CMakeLists.txt  arguments.cpp  arguments.hpp  io.hpp  log.cpp  log.hpp  xmlreader.cpp  xmlreader.hpp
cppvv/src/proof/: CMakeLists.txt  algorithm_17.cpp  algorithm_18.cpp  algorithm_19.cpp  algorithms.hpp
cppvv/src/utils/: CMakeLists.txt  btrtest.cpp  exception.hpp  utils.cpp  utils.hpp
cppvv/src/utils/bytetree/: bytetree.cpp  bytetree.hpp  leaf.cpp  leaf.hpp  node.cpp  node.hpp
cppvv/tests/: test.sh
cppvv/tests/crypto/: prg-output.txt  prg_test  ro-expected-output.txt  ro_test  sha256-expected-output.txt  sha256-test-data.txt  sha384-expected-output.txt  sha384-test-data.txt  sha512-expected-output.txt  sha512-test-data.txt  sha_test  test.sh
src/main/resources/: log4j.properties
src/main/sh/: CompareCleansedFiles2013.sh  IzkpMixing.sh  IzkpMixing2013.sh  NizkpCleansing.sh  NizkpDecryption.sh  NizkpDecryption2013.sh  NizkpRcgVcs.sh  NizkpRcgVcs2013.sh  UnpackCleansedFiles.sh  UnpackCleansedFiles2013.sh  cut_sort_diff.sh
src/site/: site.xml
src/site/apt/: IZKP_Mixing.apt  NIZKP_Cleansing.apt  NIZKP_Decryption.apt  NIZKP_RCG-VCS.apt  index.apt
src/test/resources/: ElGamalZkpIntegrationTestElGamalPublicKey.properties  ElGamalZkpIntegrationTestElGamalPublicKeys.properties  IzkpMixing2013FunctionalTestDatabaseDump  IzkpMixing2013FunctionalTestElGamalProperties.properties  IzkpMixing2013FunctionalTestElGamalPublicKeys.properties  IzkpMixing2013IntegrationTestDatabaseProperties.properties  IzkpMixingFunctionalTestDatabaseDump  IzkpMixingFunctionalTestDatabaseProperties.properties  IzkpMixingFunctionalTestElGamalProperties.properties  IzkpMixingFunctionalTestElGamalPublicKey.properties  IzkpMixingIntegrationTestDatabaseProperties2013.properties  NizkpCleansing2013FunctionalTestAreas.csv  NizkpCleansing2013FunctionalTestEncryptedVotes.csv  NizkpCleansing2013IntegrationElectionDefinition.eml  NizkpCleansingFunctionalTestAreas.csv  (+37 more)
(+317 files in other folders)
